# rem

./: .envrc  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  MIGRATION.md  Makefile  README.md  build.rs  build.sh  cleanup-test-data.swift  create-test-reminder.swift  debug-test-list.swift  fix-checksums.sh  setup-test-reminder.swift  test-create-reminder.swift  test-create-workflow.swift  test-delete-action.swift  test-delete.swift  test-migration.sh
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  release.yml
RemTUI/: Info.plist  Package.swift
RemTUI/Sources/: main.swift
RemTUIKit/: Package.swift
RemTUIKit/Sources/: RemCore.swift
RemTUIKit/Sources/RemCoreFFI/include/: RemCoreFFI.h  module.modulemap
RemTUIKit/Sources/RemTUIKit/: PermissionManager.swift  RemCore.swift  RemCoreFFI.h  RemCoreFFI.modulemap  RemindersService.swift
RemTUIKit/Tests/RemTUIKitTests/: RemTUIKitTests.swift
docs/: ARCHITECTURE.md  BUILD_STATUS.md  CI_CD_GUIDE.md  DEVELOPER_GUIDE.md  QUICK_START.md  RELEASE.md
rust-core/: Cargo.toml  build.rs  uniffi.toml
rust-core/src/: lib.rs  rem_core.udl  types.rs
rust-core/src/tui/: app.rs  components.rs  events.rs  mod.rs
src/: action.rs  app.rs  components.rs  eventkit.rs  lib.rs  main.rs
src/components/: lists.rs  permission.rs  reminders.rs
