[package]
name = "rem-core"
version = "0.1.0"
edition = "2021"
description = "Rust core library for Rem TUI"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6"
futures = "0.3"
tracing = "0.1"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"